add jpaRepositories and jpaServices, add tests for controllers, add test for services