@@ -11,12 +11,12 @@ import edu.java.services.dto.LinkDTO;
 import java.net.URI;
 import java.time.OffsetDateTime;
 import java.util.Objects;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
 @Service
+@RequiredArgsConstructor
 @Slf4j
 public class GitHubLinkUpdater implements LinkUpdater {
 
@@ -25,24 +25,13 @@ public class GitHubLinkUpdater implements LinkUpdater {
     private final GitHubClient gitHubClient;
     private final BotClient botClient;
 
-    @Autowired
-    public GitHubLinkUpdater(
-            @Qualifier("jooqLinkService") LinkService linkService,
-            @Qualifier("jooqTgChatService") TgChatService chatService,
-            GitHubClient gitHubClient, BotClient botClient
-    ) {
-        this.linkService = linkService;
-        this.chatService = chatService;
-        this.gitHubClient = gitHubClient;
-        this.botClient = botClient;
-    }
-
     @Override
     public void update(LinkDTO link) {
         URI uri = URI.create(link.getUrl());
         String[] path = uri.getPath().split("/");
         RepoResponse repoResponse = gitHubClient.fetchRepo(path[1], path[2]);
-        if (link.getUpdatedAt() == null || repoResponse.updatedAt().isAfter(link.getUpdatedAt())) {
+        if (link.getUpdatedAt() == null
+                || repoResponse.updatedAt().isAfter(link.getUpdatedAt())) {
             CommitResponse commitResponse = gitHubClient.fetchCommit(path[1], path[2]);
             link.setUpdatedAt(repoResponse.updatedAt());
             link.setCreatedAt(OffsetDateTime.now());
@@ -56,10 +45,10 @@ public class GitHubLinkUpdater implements LinkUpdater {
             botClient.sendMessage(
                     new LinkUpdate(
                             link.getUrl(),
-                            String.format("link: %s is updated", link.getUrl()),
+                            "link: %s is updated".formatted(link.getUrl()),
                             chatService.findChatsByLink(link),
                             isCommitUpdate,
-                            link.getCommitMessage()
+                            "Commit message: %s".formatted(link.getCommitMessage())
                     )
             );
         } else {
